Fix wrapping. Closes #169

--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -388,7 +388,9 @@ html, body, .container {
     padding: 5px 8px;
     outline: none;
     min-height: @box-height;
-    white-space: pre;
+    white-space: pre-wrap;
+    word-wrap: break-word;
+    min-width: 1px;
 }
 
 [contenteditable]:empty:not(:focus):before{
